--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/netinfo": "11.4.1",
     "@supabase/supabase-js": "^2.53.0",
+    "eas-cli": "^16.17.4",
     "expo": "~53.0.20",
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
@@ -20,9 +23,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-vector-icons": "^10.3.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/netinfo": "11.4.1"
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
